--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,6 +1,6 @@
 {
-  "url": "https://fragment.com/", 
-  "name": "Fragment",                   
-  "iconUrl": "https://fragmentclub.vercel.app/logo.jpg"
+  "url": "https://tether.to/", 
+  "name": "TON X USDT",                   
+  "iconUrl": "https://s2.coinmarketcap.com/static/img/coins/64x64/825.png"
 }
 
